--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 rspec:
   script:
-    - cd src
+    - cd Main/src
     - javac de/moritz30/java/keyword/*.java
     - jar -cvfm lastbuild.jar META-INF/MANIFEST.MF de/moritz30/git/test/*.class
     - scp -i /root/ovh1 lastbuild.jar root@vps1.moritz30.de:/var/www/packages/keyword/autobuild/$CI_BUILD_ID.jar
